# binohash

./: .gitignore  README.md
crates/benches/: Cargo.toml
crates/benches/benches/: gpu.rs  primitives.rs
crates/benches/src/: lib.rs
crates/der/: Cargo.toml
crates/der/src/: lib.rs
crates/der/tests/: validation.rs
crates/ecdsa-recovery/: Cargo.toml
crates/ecdsa-recovery/src/: lib.rs
crates/ecdsa-recovery/tests/: recovery.rs
crates/hash/: Cargo.toml
crates/hash/src/: lib.rs
crates/hors/: Cargo.toml
crates/hors/src/: lib.rs
crates/hors/tests/: keygen.rs
crates/metal-gpu/: Cargo.toml
crates/metal-gpu/examples/: pipeline_throughput.rs  throughput.rs
crates/metal-gpu/shaders/: batch_inv.metal  binohash.metal  der.metal  ec.metal  ec_comparison.metal  field.metal  hash_bench.metal  kernels.metal  mont_benchmark_comparison.metal  montgomery.metal  ripemd160.metal  scalar.metal  sha256.metal  uint256.metal
crates/metal-gpu/src/: gpu.rs  lib.rs
crates/metal-gpu/tests/: gpu_correctness.rs
crates/puzzle/: Cargo.toml
crates/puzzle/src/: lib.rs
crates/puzzle/tests/: puzzle.rs
crates/script/: Cargo.toml
crates/script/src/: lib.rs
crates/script/tests/: find_and_delete.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/search/tests/: pipeline.rs
crates/subset/: Cargo.toml
crates/subset/src/: lib.rs
crates/subset/tests/: combinations.rs
crates/tx/: Cargo.toml
crates/tx/src/: lib.rs
crates/tx/tests/: sighash.rs
docs/: architecture.md  benchmarks.md  cryptography.md  gpu-optimizations.md  overview.md  search-space.md
fuzz/: Cargo.toml
fuzz/artifacts/fuzz_script/: crash-58ebe549f4f3e43aff708a626638689a80449087  crash-5c9d92cad03db1ff2ecd6e3beb8a90a40d3a4a99
fuzz/artifacts/fuzz_subset/: crash-5063567806063e8d7907292725dfe8cea693be8d  crash-a3025b30fa52323ee9e27b363913b46ac89c39d5
fuzz/fuzz_targets/: der.rs  push_number.rs  puzzle.rs  scalar.rs  script.rs  sighash_crosscheck.rs  subset.rs  tx.rs
